--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mysql": "^2.18.1",
     "nodeman": "^1.1.2",
     "nodemon": "^3.0.3"
