--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodeman": "^1.1.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "uniqid": "^5.4.0"
   }
 }
